fixed: broken layout

--- a/includes/css/scss/_modal.scss
+++ b/includes/css/scss/_modal.scss
@@ -18,10 +18,6 @@
 		border: 1px solid #888;
 		max-width: min(500px,100%);
 		background-color: #fefefe;
-
-		input{
-			width: 100%;
-		}
 		
 		.form-row label{
 			display: block;
