--- a/includes/css/scss/main.scss
+++ b/includes/css/scss/main.scss
@@ -177,3 +177,7 @@ div input[type="url"]{
 .inline{
 	display: inline-block;
 }
+
+input.wide{
+	width: 100%;
+}
